# ex-smartadserver

./: README.md  config-sample.json  main.py  pyproject.toml
output/: smart.csv
