[tool.poetry]
name = "smart"
version = "0.1.0"
description = ""
authors = ["Petr Čech <petr.cech2@bizztreat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bizztreat-base = "^0.3.0"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
